begining work on SOPletter

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,13 @@ font-family: 'Quicksand', sans-serif;*/
 
 body{
   margin: 0;
+    background-color: rgb(211,241,239);
+}
+
+
+
+main{
+  margin: 0;
   text-align: center;
   font-family: 'Cabin', sans-serif;
   text-align: center;
@@ -18,13 +25,18 @@ body{
 }
 header{
   font-family: 'Quicksand', sans-serif;
+  background-color: rgb(244,153,80);
   /*width: 100%;*/
-  margin: 50px;
+  padding: 50px;
+  padding-right: 40%;
+  width:100%;
 }
 article{
   width: 100%;
-  background-color: rgb(161,188,217);
   padding: 20px;
+  padding-right: 50%;
+  background-color: rgb(244,153,80);
+
   font-size: 1.2em;
   position: relative;
 
@@ -48,8 +60,23 @@ article{
     margin: 10px;
     background-color: rgb(161,188,217);
     border-radius: 10px;
+    padding: 10px;
+}
+a{
+  color: black;
+}
+a:hover{
+  color: rgb(244,119,108);
 }
 
-a:hover{
-  color: rgb(246,236,91);
+.deco1{
+  background-color: rgb(244,119,108);
+  z-index: 10;
+  /*width: 500px;*/
+  height: 1000px;
+  bottom: 0px;
+  width: 20%;
+  position: fixed;
+  margin-left: 0;
+
 }
