working on spritepage

--- a/spritepage/scss/main.scss
+++ b/spritepage/scss/main.scss
@@ -1,7 +1,4 @@
 @import 'compass';
-@import 'normalize';
 @import 'variables';
 @import 'mixins';
-@import 'boilbefore';
-@import 'base';
-@import 'boilafter';
+@import "base";
