--- a/css/main.css
+++ b/css/main.css
@@ -610,6 +610,11 @@ a:hover {
   margin-left: 0;
 }
 
+img {
+  width: 300px;
+  height: 133px;
+}
+
 /*
  * Hide visually and from screen readers
  */
