--- a/css/main.css
+++ b/css/main.css
@@ -549,7 +549,7 @@ main {
   font-family: 'Cabin', sans-serif;
   text-align: center;
   padding-left: 20%;
-  padding-right: 20%;
+  padding-right: 10%;
   background-color: #d3f1ef;
 }
 
@@ -558,14 +558,14 @@ header {
   background-color: #f49950;
   /*width: 100%;*/
   padding: 50px;
-  padding-right: 40%;
+  padding-right: 10%;
   width: 100%;
 }
 
 article {
   width: 100%;
   padding: 20px;
-  padding-right: 50%;
+  padding-right: 15%;
   background-color: #f49950;
   font-size: 1.2em;
   position: relative;
@@ -574,7 +574,7 @@ article {
 .projectbox {
   margin-top: 10px;
   margin-left: 8%;
-  width: 100%;
+  width: 92%;
   border-width: 30%;
   border-style: solid;
   border-color: #a1bcd9;
@@ -595,6 +595,7 @@ article {
 
 a {
   color: black;
+  font-style: none;
 }
 
 a:hover {
@@ -615,6 +616,8 @@ a:hover {
 img {
   width: 300px;
   height: 133px;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 /*
